gitops/services/minio/minio-tenant.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-main-ingress
  namespace: minio-operator
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - secretName: minio-main-tls
      hosts:
        - minio.heracles.ryone.dev
  rules:
    - host: minio.heracles.ryone.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 80
